cropping fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .dragable {
   width: 100px;
-  height: 50px;
+  height: 100px;
   background-color: black;
   position: absolute;
 
@@ -50,5 +50,5 @@
     cursor: pointer;
 }
 .modal img {
-  max-width: 800px; 
+/*  max-width: 800px; */
 }
